bugfix: min-height on sections to avoid content to overflow on small devices

--- a/main/css/style.less
+++ b/main/css/style.less
@@ -129,7 +129,7 @@ aside {
 }
 
 section {
-	height: 100vh;
+	min-height: 100vh;
 	padding: 0 0 0 300px;
 	h2 {
 		font-size: 2.5rem;
